// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDetails renders without error 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "flexShrink": 1,
        "justifyContent": "space-between",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 999999,
              "borderWidth": 0,
              "display": "flex",
              "position": "relative",
            },
            Object {
              "padding": 0,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "display": "flex",
                "height": 50,
                "width": 50,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "height": 50,
                  "width": 50,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                clip={true}
                mask={
                  <UniconMask
                    attributeData={
                      Object {
                        "0": "#5CFE9D",
                        "1": "#B8C3B7",
                        "2": Array [
                          Object {
                            "path": "M34 20C34 28.8366 26.8366 36 18 36C9.16344 36 2 28.8366 2 20L2 -3.8147e-06L34 -1.01717e-06V20Z",
                          },
                        ],
                        "3": Array [
                          Object {
                            "fillType": "evenOdd",
                            "path": "M16 8C12.2937 6.62854 9.37146 3.70632 8 0C6.62854 3.70632 3.70632 6.62854 0 8C3.70632 9.37146 6.62854 12.2937 8 16C9.37146 12.2937 12.2937 9.37146 16 8ZM8 11C9.65685 11 11 9.65685 11 8C11 6.34315 9.65685 5 8 5C6.34315 5 5 6.34315 5 8C5 9.65685 6.34315 11 8 11Z",
                          },
                        ],
                      }
                    }
                    showBorder={false}
                    size={50}
                  />
                }
              >
                <View
                  transform={
                    Array [
                      Object {
                        "scale": 1.3513513513513513,
                      },
                    ]
                  }
                >
                  <View
                    height={37}
                    width={37}
                    x={0}
                    y={0}
                  >
                    <View
                      colors={
                        Array [
                          "#5CFE9D",
                          "#B8C3B7",
                        ]
                      }
                      end={null}
                      start={null}
                    />
                  </View>
                  <View
                    color="#EDE590"
                    cx={18.5}
                    cy={-13.36111111111111}
                    r={30.833333333333336}
                  >
                    <View
                      blur={15}
                    />
                  </View>
                </View>
              </View>
              <View
                clip={true}
                mask={
                  <UniconMask
                    attributeData={
                      Object {
                        "0": "#5CFE9D",
                        "1": "#B8C3B7",
                        "2": Array [
                          Object {
                            "path": "M34 20C34 28.8366 26.8366 36 18 36C9.16344 36 2 28.8366 2 20L2 -3.8147e-06L34 -1.01717e-06V20Z",
                          },
                        ],
                        "3": Array [
                          Object {
                            "fillType": "evenOdd",
                            "path": "M16 8C12.2937 6.62854 9.37146 3.70632 8 0C6.62854 3.70632 3.70632 6.62854 0 8C3.70632 9.37146 6.62854 12.2937 8 16C9.37146 12.2937 12.2937 9.37146 16 8ZM8 11C9.65685 11 11 9.65685 11 8C11 6.34315 9.65685 5 8 5C6.34315 5 5 6.34315 5 8C5 9.65685 6.34315 11 8 11Z",
                          },
                        ],
                      }
                    }
                    overlay={true}
                    showBorder={false}
                    size={50}
                  />
                }
              >
                <View
                  color="#000000"
                  height={50}
                  opacity={0.08}
                  width={50}
                  x={0}
                  y={0}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "flexGrow": 0,
              "flexShrink": 0,
              "width": 8,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flexShrink": 1,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            allowFontScaling={true}
            ellipsizeMode="tail"
            maxFontSizeMultiplier={1.4}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0E1524",
                  "display": "flex",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ]
            }
            testID="address-display/name/0x​f39F...2266"
          >
            0x​f39F...2266
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.4}
      style={
        Array [
          Object {
            "color": "#5D6785",
            "display": "flex",
            "fontFamily": "Inter-Medium",
            "fontSize": 15,
            "lineHeight": 20,
          },
        ]
      }
    >
      0xf39F...2266
    </Text>
  </View>
</View>
`;

exports[`AccountDetails renders without error with chevron 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "flexShrink": 1,
        "justifyContent": "space-between",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-start",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderColor": "transparent",
              "borderRadius": 999999,
              "borderWidth": 0,
              "display": "flex",
              "position": "relative",
            },
            Object {
              "padding": 0,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "display": "flex",
                "height": 50,
                "width": 50,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "height": 50,
                  "width": 50,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                clip={true}
                mask={
                  <UniconMask
                    attributeData={
                      Object {
                        "0": "#5CFE9D",
                        "1": "#B8C3B7",
                        "2": Array [
                          Object {
                            "path": "M34 20C34 28.8366 26.8366 36 18 36C9.16344 36 2 28.8366 2 20L2 -3.8147e-06L34 -1.01717e-06V20Z",
                          },
                        ],
                        "3": Array [
                          Object {
                            "fillType": "evenOdd",
                            "path": "M16 8C12.2937 6.62854 9.37146 3.70632 8 0C6.62854 3.70632 3.70632 6.62854 0 8C3.70632 9.37146 6.62854 12.2937 8 16C9.37146 12.2937 12.2937 9.37146 16 8ZM8 11C9.65685 11 11 9.65685 11 8C11 6.34315 9.65685 5 8 5C6.34315 5 5 6.34315 5 8C5 9.65685 6.34315 11 8 11Z",
                          },
                        ],
                      }
                    }
                    showBorder={false}
                    size={50}
                  />
                }
              >
                <View
                  transform={
                    Array [
                      Object {
                        "scale": 1.3513513513513513,
                      },
                    ]
                  }
                >
                  <View
                    height={37}
                    width={37}
                    x={0}
                    y={0}
                  >
                    <View
                      colors={
                        Array [
                          "#5CFE9D",
                          "#B8C3B7",
                        ]
                      }
                      end={null}
                      start={null}
                    />
                  </View>
                  <View
                    color="#EDE590"
                    cx={18.5}
                    cy={-13.36111111111111}
                    r={30.833333333333336}
                  >
                    <View
                      blur={15}
                    />
                  </View>
                </View>
              </View>
              <View
                clip={true}
                mask={
                  <UniconMask
                    attributeData={
                      Object {
                        "0": "#5CFE9D",
                        "1": "#B8C3B7",
                        "2": Array [
                          Object {
                            "path": "M34 20C34 28.8366 26.8366 36 18 36C9.16344 36 2 28.8366 2 20L2 -3.8147e-06L34 -1.01717e-06V20Z",
                          },
                        ],
                        "3": Array [
                          Object {
                            "fillType": "evenOdd",
                            "path": "M16 8C12.2937 6.62854 9.37146 3.70632 8 0C6.62854 3.70632 3.70632 6.62854 0 8C3.70632 9.37146 6.62854 12.2937 8 16C9.37146 12.2937 12.2937 9.37146 16 8ZM8 11C9.65685 11 11 9.65685 11 8C11 6.34315 9.65685 5 8 5C6.34315 5 5 6.34315 5 8C5 9.65685 6.34315 11 8 11Z",
                          },
                        ],
                      }
                    }
                    overlay={true}
                    showBorder={false}
                    size={50}
                  />
                }
              >
                <View
                  color="#000000"
                  height={50}
                  opacity={0.08}
                  width={50}
                  x={0}
                  y={0}
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "flexGrow": 0,
              "flexShrink": 0,
              "width": 8,
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flexShrink": 1,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "justifyContent": "center",
              },
            ]
          }
        >
          <Text
            allowFontScaling={true}
            ellipsizeMode="tail"
            maxFontSizeMultiplier={1.4}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#0E1524",
                  "display": "flex",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 15,
                  "lineHeight": 20,
                },
              ]
            }
            testID="address-display/name/0x​f39F...2266"
          >
            0x​f39F...2266
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "stretch",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "flexShrink": 1,
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={1.4}
      style={
        Array [
          Object {
            "color": "#5D6785",
            "display": "flex",
            "fontFamily": "Inter-Medium",
            "fontSize": 15,
            "lineHeight": 20,
          },
        ]
      }
    >
      0xf39F...2266
    </Text>
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "flexGrow": 0,
            "flexShrink": 0,
            "height": 4,
            "width": 4,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 999999,
            "display": "flex",
            "justifyContent": "center",
          },
          Object {
            "transform": Array [
              Object {
                "rotate": "180deg",
              },
            ],
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="50"
        bbWidth="50"
        fill="none"
        focusable={false}
        height={50}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 50,
              "width": 50,
            },
          ]
        }
        vbHeight={24}
        vbWidth={26}
        width={50}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M15 6L9 12L15 18"
            fill={
              Object {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              Array [
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              Object {
                "payload": 4284311429,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth="3"
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
